update thai power

--- a/db/families.yaml
+++ b/db/families.yaml
@@ -136,9 +136,9 @@ families:
     - person: george-p-bush
       generation: 5
   chearavanont:
-    origin: Thailand
+    origin: Thailand/China
     founder: chia-ek-chor
-    sector: agribusiness, telecommunications, retail
+    sector: conglomerate, agribusiness, telecom
     generations: 3
     status: active
     members:
