add Consulting Global Power

--- a/db/families.yaml
+++ b/db/families.yaml
@@ -362,6 +362,21 @@ families:
     - person: irineu-marinho
       generation: 1
       role: founder
+  mitsotakis:
+    origin: Greece
+    founder: konstantinos-mitsotakis
+    sector: politics
+    generations: 3
+    status: active
+    members:
+    - person: kyriakos-mitsotakis
+      generation: 2
+      role: leader
+    - person: konstantinos-mitsotakis
+      generation: 1
+      role: founder
+    - person: dora-bakoyannis
+      generation: 2
   mohn:
     origin: Gutersloh, Germany
     founder: carl-bertelsmann
